[package]
name = "emlstasher"
version = "0.1.0"
edition = "2021"

[dependencies]
elasticsearch = "7.14.0-alpha.1"  # Older version compatible with Rust 1.80
tokio = { version = "1.32.0", features = ["full"] }
mail-parser = "0.8.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
rayon = "1.7.0"
walkdir = "2.3.3"
indicatif = { version = "0.17.6", features = ["tokio"] }
chrono = "0.4.31"
futures = "0.3"
md5 = "0.7"
reqwest = { version = "0.11", features = ["json"] }
parking_lot = "0.12"
